[package]
name = "rustnpp"
version = "1.0.0"
description = "Example for rust N++ plugin"
authors = ["ნიკა <nika.begiashvili@gmail.com>"]

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc="*"
winapi = { version = "0.3.9", features = ["winuser"] }
lazy_static = "1.4.*"

[build-dependencies]
winres = "0.1.12"
